--- a/react-typescript-dnd/src/components/styles.css
+++ b/react-typescript-dnd/src/components/styles.css
@@ -39,6 +39,13 @@
     transform: scale(0.8);
     box-shadow: 0 0 5px black;
 }
+.container {
+    display: flex;
+    width: 95%;
+    margin-top: 10px;
+    justify-content: space-between;
+    align-items: center;
+}
 .todos {
     display: flex;
     justify-content: space-evenly;
