--- a/react-typescript-dnd/src/components/styles.css
+++ b/react-typescript-dnd/src/components/styles.css
@@ -48,10 +48,17 @@
 }
 .todos {
     display: flex;
-    justify-content: space-evenly;
-    width: 90%;
-    flex-wrap: wrap;
+    width: 47.5%;
+    flex-direction: column;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: rgb(50,195,202);
 }
+.todos__heading {
+    font-size: 30px;
+    color: white;
+}
+
 .todos__single {
     display: flex;
     width : 29.5%;
