--- a/react-typescript-dnd/src/components/styles.css
+++ b/react-typescript-dnd/src/components/styles.css
@@ -66,6 +66,11 @@
     padding: 20px;
     margin-top: 15px;
     background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
+    transition : 0.2s;
+}
+.todos__single:hover{
+    box-shadow: 0 0 5px black;
+    transform: scale(1.03); 
 }
 .todos__single--text {
     flex: 1;
@@ -87,13 +92,14 @@
     }
     .todos {
         width: 95%;
+        margin-bottom : 10px
     }
-    .todos__single {
-        width: 100%;
-    }
-}
-@media (max-width : 1200px) {
-    .todos__single {
-        width: 40%;
+    .container {
+        width: 95%;
+        flex-direction: column;
     }
 }
+.remove {
+    background-color: rgb(235,103,80);
+}
+
